--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 /* src/app.module.scss */
-.app {
-  color: red;
+.container {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
